--- a/Assests/Layouts/home.html
+++ b/Assests/Layouts/home.html
@@ -48,10 +48,10 @@
                             <h2>|[<span id="content" class="blink">^^</span>]|</h2>
                             <p>Find me on</p>
 
-                        <p><strong><a href="https://github.com/DilzNanayakkara" target="_blank"><img src="../Img/github.png" alt="GitHub Icon"></a></strong>
+                        <p><strong><a href="https://github.com/k0k1s" target="_blank"><img src="../Img/github.png" alt="GitHub Icon"></a></strong>
                             <strong><a href="https://www.linkedin.com/in/dilshan-nanayakkara-001-/" target="_blank"><img src="../Img/linkedin.png" alt="LinkedIn Icon"></a></strong>
-                            <strong><a href="https://www.instagram.com/dilznanayakkara/" target="_blank"><img src="../Img/X.png" alt="X Icon"></a></strong>
-                            <strong><img src="../Img/email.png" alt="Email Icon"></a></strong></p>
+                            <strong><a href="https://twitter.com/DilzNanayakkara" target="_blank"><img src="../Img/X.png" alt="X Icon"></a></strong>
+                            <strong><a href="mailto:dilz.nanayakkara@gmail.com"><img src="../Img/email.png" alt="Email Icon"></a></strong></p>
 
 
                         </div>
