--- a/Assests/Style/style.css
+++ b/Assests/Style/style.css
@@ -1,92 +1,136 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
-
-
-.content {
-    height: 100vh;
-    overflow: hidden;
-    border-top: 6px solid rgb(37, 0, 41)
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;700&display=swap');
 
 body, html {
     font-family: 'Roboto Condensed', sans-serif;
     height: 100%;
     margin: 0;
     padding: 0;
-    
-  }
+}
 
-.page{
-    background-color: rgb(0, 0, 0);
+.page {
+    background-color: rgb(255, 255, 255);
     background-image: url('../Img/page.jpg');
     background-position: 35%;
-    padding: 0% 10% 0% 10%;
+    padding: 0 10%;
     height: 100%;
     min-height: 100%;
-    position: relative;
+    display: flex;
+    flex-direction: column;
 }
-  
+
 .header {
     background-color: #ffffff;
     color: #2c2c2c;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    flex-wrap: wrap;
+}
+
+.left {
+    text-align: left;
+    font-weight: 700;
+    flex: 1 1 100%;
+    order: 1;
+}
+
+.title {
     text-align: center;
+    flex-grow: 1;
+    order: 2;
+}
+
+.right {
+    text-align: right;
+    flex: 1 1 100%;
+    order: 3;
 }
 
 h1 {
-  font-size: 40px; /* Adjust the font size as needed */
+    font-size: 40px;
+    margin: 0;
 }
 
-  .left{
-    position:absolute;
-    right: 0;
-    top: 4;
-    width: 40%;
-  }
+.nav {
+    text-align: center;
+    margin: 20px 0;
+}
 
-.nav{
+.nav a {
+    margin: 0 15px;
+    text-decoration: none;
+    color: #2c2c2c;
+}
+
+.content {
+    flex-grow: 1;
     display: flex;
-    align-items: center;
-    padding: 0%;
-
-}
-  .title{
-    width: 50%;
-    padding: 0%;
-    
-  }
-
-
-  .container {
+    flex-direction: column;
     overflow: hidden;
-    margin: 5%;
-    padding: 5%;
-    border: 1px solid #000000;
-    border-radius: 8px;
-    max-width: 100%; /* Adjusted to be responsive */
-  }
-
-iframe{
-  background-color: #ffffff;
 }
+
+iframe {
+    flex-grow: 1;
+    width: 100%;
+    border: none;
+}
+
 .footer {
-  background-color: #000000;
-  color: #ffffff;
-  height: 5%;
-  padding: 2%;
-  background-image: url('../Img/Texture.jpg')
+    background-color: #ffffff;
+    color: #1c1c1c80;
+    padding: 10px;
+    text-align: center;
+    box-sizing: border-box;
+    font-size: small;
 }
 
-img{
-  height: auto;
-  width: 10%;
-  padding: 0%;
-  margin: 0%;
+img {
+    height: 24px;
+    width: 24px;
+    margin: 0 5px;
 }
+
 .blink {
-  animation: blink-animation 1s steps(5, start) infinite;
-  color: black;
+    animation: blink-animation 1s steps(5, start) infinite;
+    color: black;
 }
+
 @keyframes blink-animation {
-  to {
-    visibility: hidden;
-  }
+    to {
+        visibility: hidden;
+    }
+}
+
+/* Responsive styles for portrait orientation */
+@media (max-width: 768px) {
+    .header {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .left, .right {
+        text-align: center;
+        width: 100%;
+    }
+
+    .right p {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+    }
+
+    img {
+        height: 32px;
+        width: 32px;
+    }
+
+    .nav {
+        margin: 10px 0;
+    }
+
+    h1 {
+        font-size: 32px;
+    }
 }
