--- a/Assests/Layouts/about.html
+++ b/Assests/Layouts/about.html
@@ -3,32 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../Style/style.css">
-    <title>Contacts</title>
-    <style>
-        .normal-container-name {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin-top: 5%;
-        }
-        .normal-container-name-item {
-            padding: 10px;
-            margin: 0 10px 10px 0;
-            width: 48%; /* Adjust width as needed */
-            box-sizing: border-box;
-            border: 1px solid #000000;        
-        }
+    <title>About</title>
 
-    </style>
 </head>
 <body>
 
     <center>
 
         <div class="normal-container-name">
-
             <div class="normal-container-name-item">
-                <p>Hi, My name is <strong>Dilshan</strong> goes by the name 'k0k1s'. An undergraduate currently studying Information Technology specializing in Cybersecurity. Feel free to chat with me about anything and check out my projects and blogs if interested.</p>
+                
+                <h3>About</h3>
+
+                <p>Hi, My name is Dilshan and on the internet goes by the name <strong>'k0k1s'</strong>. An undergraduate currently studying Information Technology specializing in Cybersecurity. Feel free to chat with me about anything and check out my projects and blogs.</p>
+                <img src="../Img/Me.jpg" alt="k0k1s" class="image-class">
+            
             </div>
 
         </div>
