--- a/Assests/Layouts/projects.html
+++ b/Assests/Layouts/projects.html
@@ -5,35 +5,32 @@
     <link rel="stylesheet" type= "text/css" href="../Style/style.css    ">
     <title>Projects</title>
 
-    <title>DilzNanayakkara's Site </title>
-
-</head>
-    <style>
-
-        .container img {
-          width: 40%;
-          height: 30%;
-          margin-right: 10px;
-        }
-        .details {
-            float: right;
-            width: 50%;
-        }
-    </style>
 </head>
 <body>
 
+
     <center>
 
-        <h2> On Going Projects </h2>
-        <div class="container">
-            <img src="../Img/project.png" alt="Project 1">
-            <div class="details">
-                <h2>______</h2>
-                <p><strong><p>If you wanted to Collaborate with me feel free to contact me. </p></strong></p>
+        <h3>Projects</h3>
+
+        <div class="normal-container-name">
+
+
+            <div class="normal-container-name-item">
+                <p><strong><a href="../Projects/URLripper.html" >URLripper</a></strong></p>
             </div>
-       
-    </div>
+            <div class="normal-container-name-item">
+                <p><strong><a href="../Projects/Client-Server.html" >Client-Server in C</a></strong></p>
+            </div>
+            <div class="normal-container-name-item">
+                <p><strong><a href="../Projects/Feeder.html" >Feeder</a></strong></p>
+            </div>
+            <div class="normal-container-name-item">
+                <p><strong><a href="../Projects/IOTDMS.html" >IOTDMS</a></strong></p>
+            </div>
+
+        </div>
+
     </center>
 
 </body>
