--- a/Assests/Layouts/home.html
+++ b/Assests/Layouts/home.html
@@ -35,6 +35,7 @@
             </div>
             <div class="right">
                 <p>
+                    <strong><a href="../resume/T Dilshan Nanayakkara Resume.pdf" target="_blank"><img src="../Img/resume.png" alt="Resume"></a></strong>
                     <strong><a href="https://github.com/k0k1s" target="_blank"><img src="../Img/github.png" alt="GitHub Icon"></a></strong>
                     <strong><a href="https://www.linkedin.com/in/dilshan-nanayakkara-001-/" target="_blank"><img src="../Img/linkedin.png" alt="LinkedIn Icon"></a></strong>
                     <strong><a href="https://twitter.com/DilzNanayakkara" target="_blank"><img src="../Img/X.png" alt="X Icon"></a></strong>
