--- a/Assests/Layouts/home.html
+++ b/Assests/Layouts/home.html
@@ -27,13 +27,14 @@
     <div class="page">
         <div class="header">
             <div class="left">
-                <p id="currentDate"></p>
-                <p id="currentTime"></p>
+                <img src="../Img/Me.jpg " alt="Profile Picture" class="profile-pic">
             </div>
             <div class="title">
                 <h1>k0k1s<span id="content" class="blink">_</span></h1>
             </div>
             <div class="right">
+                <p id="currentDate"></p>
+                <p id="currentTime"></p>
                 <p>
                     <strong><a href="../resume/T Dilshan Nanayakkara Resume.pdf" target="_blank"><img src="../Img/resume.png" alt="Resume"></a></strong>
                     <strong><a href="https://github.com/k0k1s" target="_blank"><img src="../Img/github.png" alt="GitHub Icon"></a></strong>
@@ -46,18 +47,15 @@
         <div class="nav">
             <nav>
                 |
-                <a href="javascript:void(0);" onclick="loadContent('./about.html')">About</a>|
                 <a href="javascript:void(0);" onclick="loadContent('./projects.html')">Projects</a>|
                 <a href="javascript:void(0);" onclick="loadContent('./blogs.html')">Blogs</a>|
-
             </nav>
         </div>
         <div class="content">
             <iframe id="contentFrame" frameborder="0" src="./projects.html"></iframe>
         </div>
         <div class="footer">
-            <p>Copyright &copy; k0k1s.</p>
-        </div> 
+        </div>
     </div>
 </body>
 </html>
