--- a/Assests/Style/style.css
+++ b/Assests/Style/style.css
@@ -25,8 +25,18 @@ body, html {
     margin-bottom: 20px;
 }
 
-.left, .right {
-    font-weight: 700;
+.left {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile-pic {
+    margin-top: 20px    ;
+    width: 100px; /* Adjust as needed */
+    height: 100px; /* Adjust as needed */
+    border: 2px solid #ddd; /* Optional border */
 }
 
 .title {
@@ -35,8 +45,13 @@ body, html {
 }
 
 .title h1 {
-    font-size: 24px;
-    margin-bottom: 10px;
+    font-size: 40px;
+    margin-bottom: 5px;
+}
+
+.subtitle {
+    font-size: 16px;
+    color: #777; /* Adjust color as needed */
 }
 
 .blink {
@@ -49,8 +64,16 @@ body, html {
     }
 }
 
+.right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .right p {
-    margin-bottom: 5px;
+    margin: 5px 0;
+    font-size: 14px;
+    color: #333;
 }
 
 .nav {
@@ -94,12 +117,14 @@ img {
     width: 24px;
     margin: 0 5px;
 }
+
 .normal-container-name {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 5%;
 }
+
 .normal-container-name-item {
     padding: 10px;
     width: 90%; /* Adjust width as needed */
@@ -147,10 +172,8 @@ img {
     }
 }
 
-
 .image-class {
-    /* Add your desired image styles here */
-    width: 25%;  /* Adjust width as needed */
-    height: auto;  /* Maintain aspect ratio */
-    border: 2px solid #ddd;  /* Optional border */
-  }
+    width: 25%;
+    height: auto;
+    border: 2px solid #ddd;
+}
