--- a/Assests/Style/style.css
+++ b/Assests/Style/style.css
@@ -5,7 +5,7 @@ body, html {
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #ffffff; /* Light gray background */
+    background-color:  #f2f2f2; /* Light gray background */
 }
 
 .page {
