--- a/Assests/Layouts/home.html
+++ b/Assests/Layouts/home.html
@@ -56,7 +56,7 @@
             </nav>
         </div>
         <div class="content">
-            <iframe id="contentFrame" frameborder="0" src="./projects.html"></iframe>
+            <iframe id="contentFrame" frameborder="0" src="./default.html"></iframe>
         </div>
         <div class="footer">
         </div>
