--- a/Assests/Layouts/aboutme.html
+++ b/Assests/Layouts/aboutme.html
@@ -9,10 +9,11 @@
 <body>
     <center>
         <br><br>
-
-            Hello Stranger! <br><br>
-            My name is Dilshan - CODENAME - <strong>"K0K1S"</strong> <br><br>
+        <div class="normal-container-name-item">
+           <br><br>
+            My name is <strong>Tharindu D Nanayakkara</strong> using name in cyberspace - <strong>"k0k1s"</strong> <br><br>
             Currently an undergraduate specializing in Cybersecurity at <a href="https://www.google.com/search?q=SLIIT+Sri+Lanka+Institute+of+Information+Technology" target="_blank">SLIIT</a>
-    </center>
+        <div>
+        </center>
 </body>
 </html>
