--- a/Assests/Layouts/default.html
+++ b/Assests/Layouts/default.html
@@ -6,17 +6,18 @@
     <link rel="stylesheet" type="text/css" href="../Style/style.css">
     <title>Default Page</title>
 </head>
+
+
 <body>
-    <div class="page">
-        <br>
-<center>
-    <h1>Hello, Unexpected Visitor!</h1>
+    <center>
+        <br><br>
+        <div class="normal-container-name-item">
 
-</center>
-      
-
-
-        <!-- More content -->
-    </div>
+        <h1>Tharindu D Nanayakkara</h1>
+        <p>Hello there!, I'm a cybersecurity undergraduate</p>
+        </div>
+    
+    </center>
 </body>
+
 </html>
