--- a/Assests/Layouts/home.html
+++ b/Assests/Layouts/home.html
@@ -49,7 +49,7 @@
         }
 
         .header, .nav, .footer, .content iframe {
-            background-color: #f9f9f9;
+            background-color: #c1c1c1;
         }
 
         a {
